# Short-term-traffic-congestion-prediction-for-London-Final-Project

./: .env  README.md  modal_app.py  pyproject.toml  requirements.txt
.github/: run_pipelines_every_30min.yml
notebooks/: 00_api_smoke_tests.ipynb  01_data_collection_and_eda.ipynb  01b_etl_to_feature_store.ipynb  01c_metadata_feature_group.ipynb  02_feature_engineering_and_modeling.ipynb  02_feature_engineering_backfill.ipynb  03_inference_and_hf_space_demo.ipynb  03_weather_feature_backfill.ipynb  04_tfl_disruptions_backfill_fast.ipynb  05_label_generation_backfill.ipynb  05b_feature_view.ipynb  06_model_training.ipynb  07_realtime_feature_update_modal_30min.ipynb  08_inference_pipeline.ipynb  appendix_map.ipynb  appendix_sanity.ipynb  appendix_schemas.ipynb  predictions_latest.json
notebooks/artifacts/model_package/: feature_cols.json  meta.json  metrics.json  model.keras  scaler.pkl
notebooks/data/interim/: monitoring_points.csv  monitoring_points_metadata.csv  point_geometry_cache.parquet
notebooks/data/processed/: traffic_flow_data.csv  weather_hourly_backfill.parquet
notebooks/data/raw/: tomtom_snapshots_20260104T210243Z.jsonl  tomtom_snapshots_20260105T101732Z.jsonl  tomtom_snapshots_20260105T232705Z.jsonl  (+5 more)
sample_responses/: dft_count_points_20260103T202312Z.json  dft_local_authorities_20260103T202312Z.json  tfl_roads_20260103T202312Z.json  tomtom_flow_segment_20260104T203500Z.json
src/traffic_forecast/: __init__.py  config.py  features.py  http.py  inference.py  model.py
src/traffic_forecast_london.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+13 files in other folders)
